--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <h1 id="welcome-message"></h1>
+        <button class="continue-button">Click to Continue</button>
     </div>
 
     <script src="script.js"></script>
