--- a/video.html
+++ b/video.html
@@ -13,6 +13,10 @@
             height: 100vh;
             margin: 0;
             background-color: #efecdb;
+            background-image: url('images/BG-pattern_transp2.png'); /* Set your pattern PNG */
+            background-size: cover; /* Adjust size (can use 'contain' or specific dimensions too) */
+            background-repeat: no-repeat; /* Prevent repeating */
+            background-position: center; /* Center the background image */
             font-family: 'Inter', sans-serif;
         }
 
