--- a/video.html
+++ b/video.html
@@ -34,6 +34,27 @@
             width: 100%; /* Make the video responsive */
             border-radius: 10px; /* Optional rounded corners for the video */
         }
+
+        .register-button {
+            font-size: 1.6rem;
+            color: #efecdb;
+            background-color: #8c1837;
+            border: 0px solid #8c1837;
+            padding: 20px;
+            border-radius: 45px;
+            font-family: 'Inter', sans-serif;
+            font-weight: 600;
+            letter-spacing: -0.5px;
+            cursor: pointer;
+            text-align: center;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            text-decoration: none; /* Remove underline if using <a> */
+        }
+
+        .register-button:hover {
+            background-color: #efecdb;
+            color: #8c1837;
+        }
     </style>
 </head>
 <body>
