--- a/video.html
+++ b/video.html
@@ -64,5 +64,8 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
+    <a href="register.html" class="register-button">Register!</a>
+
 </body>
 </html>
