--- a/video.html
+++ b/video.html
@@ -28,6 +28,8 @@
             padding: 20px; /* Optional padding */
             border-radius: 10px; /* Optional rounded corners */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional shadow */
+            margin-bottom: 80px; /* 80px space below the video */
+
         }
 
         video {
@@ -40,8 +42,8 @@
             color: #efecdb;
             background-color: #8c1837;
             border: 0px solid #8c1837;
-            padding: 20px;
-            border-radius: 45px;
+            padding: 15px;
+            border-radius: 30px;
             font-family: 'Inter', sans-serif;
             font-weight: 600;
             letter-spacing: -0.5px;
