--- a/video.html
+++ b/video.html
@@ -68,7 +68,7 @@
         </video>
     </div>
 
-    <a href="register.html" class="register-button">Register!</a>
+    <a href="https://docs.google.com/forms/d/18on4mfuCsX95LSZ77MeK09Y--sRXJO_bL0ixg2Nh6jg/viewform" class="register-button">Register!</a>
 
 </body>
 </html>
