--- a/video.html
+++ b/video.html
@@ -63,7 +63,7 @@
 <body>
     <div class="video-container">
         <video controls>
-            <source src="https://ayrexdigital.com/Binzaid_Welcome_Video.mp4" type="video/mp4"> <!-- Replace with your video path -->
+            <source src="https://youtu.be/70WIZNnJMd4" type="video/mp4"> <!-- Replace with your video path -->
             Your browser does not support the video tag.
         </video>
     </div>
