--- a/video.html
+++ b/video.html
@@ -63,7 +63,7 @@
 <body>
     <div class="video-container">
         <video controls>
-            <source src="https://www.youtube.com/watch?v=70WIZNnJMd4" type="video/mp4"> <!-- Replace with your video path -->
+        <iframe src="https://www.youtube.com/embed/70WIZNnJMd4?si=v1_Yb7NsFIS3a4mc" allowfullscreen></iframe>
             Your browser does not support the video tag.
         </video>
     </div>
