--- a/video.html
+++ b/video.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/70WIZNnJMd4?si=v1_Yb7NsFIS3a4mc" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/70WIZNnJMd4?rel=0&modestbranding=1&showinfo=0&si=v1_Yb7NsFIS3a4mc" allowfullscreen></iframe>
     </div>
 
     <a href="https://docs.google.com/forms/d/18on4mfuCsX95LSZ77MeK09Y--sRXJO_bL0ixg2Nh6jg/viewform" class="register-button">Register!</a>
