--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1 id="welcome-message"></h1>
-        <button class="continue-button" onclick="location.href='video.html'">Click to Continue</button>
+        <button class="continue-button" onclick="location.href='https://docs.google.com/forms/d/18on4mfuCsX95LSZ77MeK09Y--sRXJO_bL0ixg2Nh6jg/viewform'">Click to register</button>
     </div>
 
     <script src="script.js"></script>
