--- a/video.html
+++ b/video.html
@@ -61,10 +61,10 @@
                 videoUrl = "https://www.youtube.com/embed/70WIZNnJMd4?rel=0&modestbranding=1&showinfo=0&si=v1_Yb7NsFIS3a4mc"; // English video
                 break;
             case 'spanish':
-                videoUrl = "https://www.youtube.com/embed/YOUR_SPANISH_VIDEO_ID"; // Replace with actual Spanish video ID
+                videoUrl = "https://www.youtube.com/embed/6Ox3OM_sw9E?si=PaDVskaAmH0Beht9"; // Replace with actual Spanish video ID
                 break;
             case 'french':
-                videoUrl = "https://www.youtube.com/embed/YOUR_FRENCH_VIDEO_ID"; // Replace with actual French video ID
+                videoUrl = "https://www.youtube.com/embed/3jWRrafhO7M?si=RuiyBHIUYg83NH7g"; // Replace with actual French video ID
                 break;
             default:
                 videoUrl = "https://www.youtube.com/embed/70WIZNnJMd4?rel=0&modestbranding=1&showinfo=0&si=v1_Yb7NsFIS3a4mc"; // Default to English video
