--- a/video.html
+++ b/video.html
@@ -58,7 +58,7 @@
 
         switch (language) {
             case 'english':
-                videoUrl = "https://www.youtube.com/embed/70WIZNnJMd4?rel=0&modestbranding=1&showinfo=0&si=v1_Yb7NsFIS3a4mc"; // English video
+                videoUrl = "https://www.youtube.com/embed/R5Sy0PD0i_g?si=9gt9d8iSHHnjp52T"; // English video
                 break;
             case 'spanish':
                 videoUrl = "https://www.youtube.com/embed/6Ox3OM_sw9E?si=PaDVskaAmH0Beht9"; // Replace with actual Spanish video ID
