--- a/video.html
+++ b/video.html
@@ -67,7 +67,7 @@
                 videoUrl = "https://www.youtube.com/embed/3jWRrafhO7M?si=RuiyBHIUYg83NH7g"; // Replace with actual French video ID
                 break;
             default:
-                videoUrl = "https://www.youtube.com/embed/70WIZNnJMd4?rel=0&modestbranding=1&showinfo=0&si=v1_Yb7NsFIS3a4mc"; // Default to English video
+                videoUrl = "https://www.youtube.com/embed/R5Sy0PD0i_g?si=9gt9d8iSHHnjp52T"; // Default to English video
         }
 
         // Set the video URL in the iframe
