--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="parallax-layer" id="layer1"></div>
-    <div class="parallax-layer" id="layer2"></div>
-    <div class="parallax-layer" id="layer3"></div>
+    <div class="text-overlay">The Embryo</div>
+    <div id="layer1" class="layer"></div>
+    <div id="layer2" class="layer"></div>
+    <div id="layer3" class="layer"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
