--- a/video.html
+++ b/video.html
@@ -61,10 +61,10 @@
                 videoUrl = "https://www.youtube.com/embed/R5Sy0PD0i_g?si=9gt9d8iSHHnjp52T"; // English video
                 break;
             case 'spanish':
-                videoUrl = "https://www.youtube.com/embed/6Ox3OM_sw9E?si=PaDVskaAmH0Beht9"; // Replace with actual Spanish video ID
+                videoUrl = "https://www.youtube.com/embed/ldVKcrqZBsc?si=T-PRW0Q0SQJngGj9"; // Replace with actual Spanish video ID
                 break;
             case 'french':
-                videoUrl = "https://www.youtube.com/embed/3jWRrafhO7M?si=RuiyBHIUYg83NH7g"; // Replace with actual French video ID
+                videoUrl = "https://www.youtube.com/embed/xbdCclXaeYI?si=rDLQ-dnpnCoCfLM2"; // Replace with actual French video ID
                 break;
             default:
                 videoUrl = "https://www.youtube.com/embed/R5Sy0PD0i_g?si=9gt9d8iSHHnjp52T"; // Default to English video
