--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Embryo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet"> <!-- Import Inter font -->
+    <title>The Embryo</title>
 </head>
 <body>
+    <div id="background" class="layer"></div>
     <div class="text-overlay">The Embryo</div>
-    <div id="layer1" class="layer"></div>
-    <div id="layer2" class="layer"></div>
-    <div id="layer3" class="layer"></div>
+    <img src="your-image-below-text.jpg" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
 
     <script src="script.js"></script>
 </body>
