--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -10,7 +10,7 @@
 <body>
     <div id="background" class="layer"></div>
     <div class="text-overlay">The Embryo</div>
-    <img src="your-image-below-text.jpg" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
+    <img src="Embryo_parallax_embryo_cutout.png" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
 
     <script src="script.js"></script>
 </body>
