--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -12,6 +12,20 @@
     <div class="text-overlay">The Embryo</div>
     <img src="Embryo_parallax_embryo_cutout.png" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
 
+<!-- Dropdown menu -->
+    <select id="languageSelect" class="language-dropdown">
+        <option value="">Select Language</option>
+        <option value="english">English</option>
+        <option value="spanish">Spanish</option>
+        <option value="french">French</option>
+    </select>
+
+    <!-- Audio player -->
+    <audio id="audioPlayer" controls class="audio-player">
+        <source id="audioSource" src="" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    
     <script src="script.js"></script>
 </body>
 </html>
