--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -16,8 +16,8 @@
     <select id="languageSelect" class="language-dropdown">
         <option value="">Select Language</option>
         <option value="english">English</option>
-        <option value="spanish">Spanish</option>
-        <option value="french">French</option>
+        <option value="spanish">Español</option>
+        <option value="french">Français</option>
     </select>
 
     <!-- Audio player -->
