--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -14,7 +14,7 @@
 
 <!-- Dropdown menu -->
     <select id="languageSelect" class="language-dropdown">
-        <option value="">Select Language</option>
+        <option value="">🔈 Select Language</option>
         <option value="english">English</option>
         <option value="spanish">Español</option>
         <option value="french">Français</option>
