--- a/mushaf/mushaf.html
+++ b/mushaf/mushaf.html
@@ -10,7 +10,7 @@
 <body>
     <div id="background" class="layer"></div>
     <div class="text-overlay">Mushaf Othman</div>
-    <img src="Embryo_parallax_embryo_cutout.png" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
+    <img src="mushaf_cutout.png" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
 
 <!-- Dropdown menu -->
     <select id="languageSelect" class="language-dropdown">
