--- a/mushaf/mushaf.html
+++ b/mushaf/mushaf.html
@@ -20,11 +20,11 @@
         <option value="french">Français</option>
     </select>
 
-    <!-- Audio player -->
-    <audio id="audioPlayer" controls class="audio-player">
-        <source id="audioSource" src="" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <!-- Video player container -->
+    <video id="videoPlayer" class="video-player" controls>
+        <source id="videoSource" src="" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     
     <script src="script.js"></script>
 </body>
