--- a/mushaf/mushaf.html
+++ b/mushaf/mushaf.html
@@ -21,7 +21,7 @@
     </select>
 
     <!-- Video player container using iframe -->
-    <iframe id="videoPlayer" class="video-player" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="videoPlayer" allowfullscreen></iframe>
     
     <script src="script.js"></script>
 </body>
