--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet"> <!-- Import Inter font -->
     <title>The Embryo</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="my-project/images/favicon.png" type="image/png">
 </head>
 <body>
     <div id="background" class="layer"></div>
