--- a/mushaf/mushaf.html
+++ b/mushaf/mushaf.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
     <title>Mushaf Othman</title>
+    <link rel="icon" href="my-project/images/favicon.png" type="image/png">
 </head>
 <body>
     <div id="background" class="layer"></div>
