--- a/embryo/embryo.html
+++ b/embryo/embryo.html
@@ -11,9 +11,13 @@
 <body>
     <div id="background" class="layer"></div>
     <div class="text-overlay">The Embryo</div>
-    <img src="Embryo_parallax_embryo_cutout.png" alt="Description of image" class="below-text-image"> <!-- Image below the text -->
+    
+    <!-- Video below the text -->
+    <video src="Embryo_floating_in_an_embryonic_fluid.mp4" class="below-text-video" autoplay muted loop playsinline>
+        Your browser does not support the video tag.
+    </video>
 
-<!-- Dropdown menu -->
+    <!-- Dropdown menu -->
     <select id="languageSelect" class="language-dropdown">
         <option value="">🔈 Select Language</option>
         <option value="english">English</option>
