--- a/mountains/mountains.html
+++ b/mountains/mountains.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="embryo/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet"> <!-- Import Inter font -->
     <title>The Mountains</title>
     <link rel="icon" href="embryo/favicon.png" type="image/png">
